overflow modal fix

--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -418,6 +418,7 @@ p
   border-top: 1px solid #F1EBE8
   border-right: 1px solid #F1EBE8
   border-left: 1px solid #F1EBE8
+  overflow: visible !important
   &:last-child
     border-bottom: 1px solid #F1EBE8
   
